Bug 399821 - Recent Documents - Thumbnails
Summary: Recent Documents - Thumbnails
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.2.0-preview
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-15 04:55 UTC by Leo
Modified: 2018-10-21 12:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leo 2018-10-15 04:55:26 UTC
SUMMARY

On application start up or any state where no documents are loaded, the main work space presents the Recent Documents list.

It is noted that this will display a thumbnail for .kra files but not for other file types.


STEPS TO REPRODUCE
1. Start Krita or close all current documents


OBSERVED RESULT

Recent Documents only show thumbnails for .kra files and not other file types.


EXPECTED RESULT

Thumbnails for all file types are displayed.


SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 5.13.1
KDE Frameworks Version: 5.47.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2018-10-21 12:31:14 UTC
Git commit 7be26ceef2e83dc28c9985b9b51181c09acf143f by Boudewijn Rempt.
Committed on 21/10/2018 at 12:30.
Pushed by rempt into branch 'master'.

Create thumbnails for files other than ora and kra for the welcome page

This slows start-up a bit: let's see whether people will have serious
problems with it. This patch also prevents the populateRecentDocuments
function from being called three times on start-up.

M  +0    -3    libs/ui/KisMainWindow.cpp
M  +40   -54   libs/ui/KisWelcomePageWidget.cpp

https://commits.kde.org/krita/7be26ceef2e83dc28c9985b9b51181c09acf143f