Create thumbnails for files other than ora and kra for the welcome page

This slows start-up a bit: let's see whether people will have serious
problems with it. This patch also prevents the populateRecentDocuments
function from being called three times on start-up.

BUG:399821